# wp1101-final

./: README.md  SLOC  background.css  blender.org-custom.min.css  blender.org.css  boardRecord.js  i18n.js  index.html  index.js  loading.css  main.js  manifest.json  offline.html  style.css  temp.js  test.css  test.html
3d-reversi/: reversi3D.audio.worklet.js  reversi3D.html  reversi3D.js  reversi3D.pck
3d-reversi/3d-reversi/: default_env.tres  export_presets.cfg  project.godot
3d-reversi/3d-reversi/.import/: 3d_reversi.apple-touch-icon.png-5a327b6394714154b95adb21d1493cf7.md5  3d_reversi.apple-touch-icon.png-5a327b6394714154b95adb21d1493cf7.stex  (+86 more)
3d-reversi/web/: reversi3D.html  reversi3D.pck
ai/: ai.wasm  index.html  index.js
ai/othello_ai/: dataset  main_js.go
data/: record-demo.json  期末報告第11組.odp
easter-egg/: index.html
easter-egg/img/: 0  1  10  100  101  102  103  104  106  107  108  109  11  110  111  112  113  115  116  117  118  119  12  120  121  122  123  124  125  126  127  130  131  132  133  134  135  136  137  138  (+171 more)
reversi/: ai.js  ai.wasm  index.html  index.js  index.manifest.json  index.pck  index.service.worker.js  index.worker.js  loading.css  manual_after_export.md  othello_wasm_bg.wasm  reversi3D.html  reversi3D.pck  wasm_exec.js
reversi/othello-wasm/: Cargo.toml  build
reversi/othello-wasm/result/: index.html
reversi/othello-wasm/result/res/: othello_wasm.d.ts  othello_wasm.js  othello_wasm_bg.wasm.d.ts
reversi/othello-wasm/src/: lib.rs
reversi/othello_ai/: build  go.mod  main.go  main_js.go
test/: index.html
(+94 files in other folders)
