[package]
name = "othello-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
arrayvec = "0.7.1"

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort" # or "unwind"
incremental = false
codegen-units = 16
